--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.4",
     "install": "^0.13.0",
     "npm": "^10.8.3",
     "react": "^18.3.1",
